# nossis-docs

./: .commitlintrc.js  .dir-locals.el  .flake8  .gitignore  .mock-artifacts-cleanup.sh  .mock-artifacts-generate.sh  .pre-commit-config.yaml  .tflint.hcl  CONTRIBUTING.md  GNUmakefile  README.md  backend.tf.template  index.html  main.tf  pyproject.toml  terraform.tfvars.template  variables.tf
.github/workflows/: cd.yml  ci.yml
docs/: .index.html  conf.py  contributing.md  credits.md  index.md
docs/_templates/: page.html  versioning.html
en/develop/: contributing.html  credits.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/develop/_modules/: index.html
en/develop/_modules/nossis_docs/test/: conftest.html  test_pipeline.html
en/develop/_sources/apidocs/: index.rst
en/develop/_sources/apidocs/nossis_docs/: nossis_docs.pipeline.rst  nossis_docs.rst  nossis_docs.test.conftest.rst  nossis_docs.test.rst  nossis_docs.test.test_pipeline.rst
en/develop/_static/tippy/: contributing.1b90b7ac-9505-4c15-8315-802fdc536b1f.js  credits.d9bf9568-9eb0-4cc5-9b11-cdb24e56d537.js  index.62890d64-fc5c-4254-9031-70a4fd8e8240.js
en/develop/_static/tippy/apidocs/: index.361caa2d-7859-407a-8f1b-c6fa921ed6b6.js
en/develop/_static/tippy/apidocs/nossis_docs/: nossis_docs.bdd735e8-ffa8-4a48-aa3d-292bb3898e0d.js  nossis_docs.pipeline.1c3f7583-575c-440d-8f35-8a6f98ddbd63.js  nossis_docs.test.83673ed4-657d-482a-9a1e-139230cee7ca.js  nossis_docs.test.conftest.6d4d185d-dba1-4e8d-bc6d-a0feca64490c.js  nossis_docs.test.test_pipeline.125fce68-cbca-4374-af85-73f7d1eb3f78.js
en/develop/apidocs/: index.html
en/develop/apidocs/nossis_docs/: nossis_docs.html  nossis_docs.pipeline.html  nossis_docs.test.conftest.html  nossis_docs.test.html  nossis_docs.test.test_pipeline.html
modules/: .gitignore
src/nossis_docs/: __init__.py  pipeline.py
src/nossis_docs/test/: __init__.py  conftest.py  test_app.py  test_pipeline.py
